--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@vanilla-extract/babel-plugin": "^1.2.0",
     "@vanilla-extract/css": "1.9.2",
+    "@vanilla-extract/dynamic": "^2.0.3",
     "@vanilla-extract/sprinkles": "^1.5.1",
     "@vanilla-extract/webpack-plugin": "^2.2.0",
     "babel-loader": "^8.2.2",
